<resources>
    <string name="app_name">UIDemo</string>


    <!-- Feeds 模块 -->
    <string name="feeds_update_success">内容已更新</string>
    <string name="feeds_update_no_more">已更至最新</string>
    <string name="feeds_hot_title">最热玩法</string>
    <string name="feeds_ad_go_to">立即使用</string>
    <string name="feeds_login_hint">立即登录</string>
    <string name="feeds_tag_count">%1$s 篇文章</string>
    <string name="feeds_reading_count">%1$s阅读</string>
    <string name="feeds_error_no_login">登录后可查看收藏的文章</string>
    <string name="feeds_error_network">无网络连接，请检查网络设置</string>
    <string name="feeds_error_network_permission">请检查网络访问开关是否打开</string>
    <string name="feeds_error_feed_empty">暂无内容</string>
    <string name="feeds_footer_hint">没有更多内容了</string>

    <!-- 首页中间的功能入口每个item项的title -->
    <!-- item的结构：title#identify id#priority-->
    <string name="main_func_ops_title_1">装饰美化#TTPTBEAUTIFY#1200</string>
    <!--<string name="main_func_ops_title_2">美颜自拍#TTPTCAMERA#1100</string>-->
    <string name="main_func_ops_title_3">美容美妆#TTPTFACE#1000</string>
    <string name="main_func_ops_title_4">疯狂变脸#TTPTCOSFUN#900</string>
    <string name="main_func_ops_title_5">故事拼图#TTPTCOLLAGE#800</string>
    <string name="main_func_ops_title_6">魔法抠图#TTPTBUCKLE#700</string>
    <string name="main_func_ops_title_7">动感MV#TTPTVIDEOEDIT#600</string>
    <string name="main_func_ops_title_8">萌偶#TTPTEMOJI#500</string>
    <string name="main_func_ops_title_9">趣味多图#TTPTBATCH#400</string>
    <string name="main_func_ops_title_10">大头贴#TTPTPLAYSTICKER#300</string>
    <string name="main_func_ops_title_11">表情包#TTPTGIF#200</string>
    <string name="main_func_ops_title_12">素材中心#TTPTMATERIALS#100</string>

    <string name="daily_cos_hint_net_err">啊哦，你的网络走丢咯</string>
    <string name="daily_cos_btn_reload">重新加载</string>

    <string name="daily_cos_hint_end_title">今天的造型看完啦</string>
    <string name="daily_cos_hint_end">明天会有更多新造型，记得回来！</string>
    <string name="daily_cos_btn_notify">开启通知</string>
    <string name="daily_cos_btn_notify_hint">当有新造型时第一时间通知你</string>


    <string name="editor">装饰美化</string>
    <string name="makeup">美容美妆</string>
    <string name="collage">故事拼图</string>
    <string name="batch_editor">趣味多图</string>
    <string name="beauty_camera">自拍相机</string>
    <string name="deprecated_beauty_camera">美容相机</string>
    <string name="watermark_camera">水印相机</string>
    <string name="gif_camera">GIF表情包</string>
    <string name="camera_video">动效</string>
    <string name="guide">P图部落</string>
    <string name="cartoon">卡通人像</string>
    <string name="cosmeticfun">疯狂变脸</string>
    <string name="buckle">魔法抠图</string>
    <string name="play_sticker">大头贴</string>
    <string name="video_template">趣动视频</string>
    <string name="emoji">萌偶</string>
    <string name="video">动感MV</string>
</resources>
